= v0.7.0
* Ext JS 4 compatibility
* API changes
  * New +ext_uri+ config option (defaults to "extjs") - relative URI to the Ext JS library on the server.
  * The +ext_location+ config option renamed to +ext_path+
  * New +ext3_compat_uri+ config option (defaults to +nil+) - relative URI to the Ext 3 compatibility layer. When nil, no compatibility layer is loaded.

= v0.6.7 - to be released
* enhancements
  * No more using +method_missing+ for invoking endpoints.
  * New "cache" option for `netzke_init` which gets passed to `javascript_include_tag` (no support for css caching of this type yet)
  * Netzke dynamic js and css-files such as ext.js, touch.css, now get generated at the application start, and put into "public/netzke". Solves a long standing problem with serving those files by HTTP servers in some cases. Enables caching naturally.
  * Moved features and specs to test/rails_app (tests should be run from that folder from now on)

= v0.6.6 - 2011-02-26
* enhancements
  * Client-server communication is updated to use Ext.Direct (many thanks to @pschyska)
  * Introduced +js_translate+ class method that allows specifying i18n properties used in the JavaScript class
  * Better handling of actions i18n
  * New `Netzke::Base.class_config_option` method to specify a class-level configuration options for a component, e.g. (in GridPanel): `class_config_option :column_filters_available, true`. This option then can be set in Rails application configuration, e.g.: `config.netzke.basepack.grid_panel.column_filters_available = false`, or directly on `Netzke::Core.config`, e.g.: `Netzke::Core.config.netzke.basepack.grid_panel.column_filters_available = false`.

= v0.6.5 - 2011-01-14
* enhancements
  * Various fixes for IE
  * Support for Sencha Touch
  * An endpoint can now "call" JavaScript functions that accept multiple parameters, by specifying an array, e.g.:
      {:some_js_function => [arg1, arg2]}