@@ -4,6 +4,8 @@
   * New +ext_uri+ config option (defaults to "extjs") - relative URI to the Ext JS library on the server.
   * The +ext_location+ config option renamed to +ext_path+
   * New +ext3_compat_uri+ config option (defaults to +nil+) - relative URI to the Ext 3 compatibility layer. When nil, no compatibility layer is loaded.
+  * New +current_user_method+ config option (defaults to :current_user) to let Netzke::Core know which method to call on Rails controller to retrieve the current user.
+  * New +Netzke::Core.current_user+ method to retrieve the current user.
 
 = v0.6.7 - to be released
 * enhancements
